@@ -2029,11 +2029,11 @@ gint plugin_init(gchar **error)
   /* version check */
   if((sylpheed_get_version() > VERSION_NUMERIC)) {
     *error = g_strdup("Your Sylpheed-Claws version is newer than the version "
-		      "the plugin was built with");
+		      "the Perl plugin was built with");
     return -1;
   }
-  if((sylpheed_get_version() < MAKE_NUMERIC_VERSION(2, 0, 0, 81))) {
-    *error = g_strdup("Your Sylpheed-Claws version is too old");
+  if((sylpheed_get_version() < MAKE_NUMERIC_VERSION(2, 4, 0, 81))) {
+    *error = g_strdup("Your Sylpheed-Claws version is too old for the Perl plugin");
     return -1;
   }
 
