@@ -1,3 +1,9 @@
+2006-08-24 [colin]	0.9.4cvs3
+
+	* configure.ac
+	* src/perl_plugin.c
+		Update required version
+
 2006-08-24 [wwp]	0.9.4cvs2
 
 	* src/perl_plugin.c
